samples/_failures_safe/1761474230_e5afb6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_298d78f9.c:160: error: expected ‘;’, ‘,’ or ‘)’ at end of input
